# realistic-human-body-deformation-physics

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  index.html
docs/: DESTRUCTION_ARCHITECTURE.md  VISION.md
docs/reference/: README.md
docs/reference/pixel_human_silhouettes/: front_adult_silhouette_41x96.mask
src/: bodyFactory.js  input.js  materials.js  physics.js  qa.js  renderer.js  sandbox.js  simulation.rs  styles.css
src/cpp/: simulation.cpp  simulation.hpp  win32_main.cpp
tests/: simulation_tests.cpp  simulation_tests.rs
tools/: anatomy_diagnostics.cpp  build_app.ps1  common.ps1  strike_scenarios.cpp  verify.ps1
